--- a/day2/02.md
+++ b/day2/02.md
@@ -140,3 +140,5 @@ is equal to 1 as follows:
 pbmc.filtered <- ScaleData(pbmc.filtered)
 ```
 
+[Previous Chapter](./01.md) | 
+[Next Chapter](./03.md)
