--- a/day2/03.md
+++ b/day2/03.md
@@ -73,5 +73,6 @@ by variance.
 * Calculate variances manually from the matrix
 * Sort genes based on variances in decreasing order and show top 6 genes
 
-
+[Previous Chapter](./02.md)|
+[Next Chapter](./04.md)
 
