--- a/day2/01.md
+++ b/day2/01.md
@@ -144,7 +144,7 @@ pbmc.seurat@meta.data %>% head
 <blockquote>
 Create a Seurat object 
 
-The file in the follwing URL:
+The file in the following URL:
 
 `https://raw.githubusercontent.com/caramirezal/caramirezal.github.io/master/bookdown-minimal/data/pbmc_10X_250_cells.tsv` 
 
