--- a/day2/02.md
+++ b/day2/02.md
@@ -106,14 +106,14 @@ features recorded.
 
 ## Exercises
 
-
-> Performing your own QC
+<blockquote>
+Performing your own QC
 
 Perform a QC using the downsampled 10 PBMC 250 cells data
 
 * Calculate and visualize QC metrics
 * Filter out cells based on the calculated values
-
+</blockquote>
 
 
 ## Normalization
