--- a/day2/02.md
+++ b/day2/02.md
@@ -87,16 +87,17 @@ ncol(pbmc.filtered)
 
 <br>
 <details>
-<summary> *How are the number of features and UMI counts related?* 
+<summary> How are the number of features and UMI counts related?
 <br>
 TIP: Use the function FeatureScatter, inspect the manual using ?function.
 </summary>
 <br>
 <b>Answer:</b>
 <br>
-`FeatureScatter(pbmc, feature1 = "nCount_RNA", feature2 = "nFeature_RNA")`
+```r
+FeatureScatter(pbmc, feature1 = "nCount_RNA", feature2 = "nFeature_RNA")
+```
 <br>
-![](figures/qc_ncount_vs_features.png)
 
 We observe as expected a linear relation between the number of UMI counts and the 
 features recorded.
