--- a/day2/03.md
+++ b/day2/03.md
@@ -66,12 +66,14 @@ For further analysis we will use only HVGs.
 
 ## Exercises
 
-> Extract normalized expression values and calculate the variance in genes and order them
+<blockquote>
+Extract normalized expression values and calculate the variance in genes and order them
 by variance.
 
 * Extract the matrix of gene expression normalized values from the Seurat object
 * Calculate variances manually from the matrix
 * Sort genes based on variances in decreasing order and show top 6 genes
+</blockquote>
 
 [Previous Chapter](./02.md)|
 [Next Chapter](./04.md)
