--- a/day2/04.md
+++ b/day2/04.md
@@ -50,11 +50,12 @@ the number of PC equal to 7.
 
 ## Exercises
 
-> Manipulation of PCA embedded projection
+<blockquote>
+Manipulation of PCA embedded projection
 
  * Extract PCA embedding matrix
  * Make a PCA plot showing the first 2 principal components 
- 
+ </blockquote>
 
 
 [Previous Chapter](./03.md)|
