--- a/day2/07.md
+++ b/day2/07.md
@@ -133,15 +133,16 @@ DotPlot(pbmc.filtered,
 
 ## Exercises
 
-> Provide a report of all your findings (QC, clustering) including plots, parameter selection
+<blockquote>
+Provide a report of all your findings (QC, clustering) including plots, parameter selection
 and conclusions using the 10x PBMC 250 subsampled data.
 
-> Using the scRNA-Seq workflow that we have seen analize a dataset of PBMC cells stimulated
+Using the scRNA-Seq workflow that we have seen analize a dataset of PBMC cells stimulated
 with IFN beta. 
 
 * Load the seurat object containing the data to a variable named `ifnb` using the following commands:
 
-```
+```r
 url_ifn <- 'https://github.com/caramirezal/caramirezal.github.io/blob/master/bookdown-minimal/data/pbmc_ifnb_stimulated.seu.rds?raw=true'
 ifnb <- readRDS(url(url_ifn))
 ```
@@ -149,6 +150,7 @@ ifnb <- readRDS(url(url_ifn))
 * This data is downsampled from the [Kang HM et al, 2017 data](https://www.nature.com/articles/nbt.4042).
 * Provide a report in a Rmd file.   
 
+</blockquote>
 
 [Previous Chapter](./06.md) | 
 
