--- a/day2/01.md
+++ b/day2/01.md
@@ -55,7 +55,15 @@ Seurat objects can be seen as a container of different features. At this step it
 our gene expression matrix, but in addition it can store metadata, processed data,
 information from different assays, for example, scATACSeq, scCITESeq or unspliced transcripts.
 
-We can explore the seurat object using the `$` to explore its *metadata* in combination with the tab 
+There are two options to explore the content of the object:
+
+1. **direct access** to the data slots (Equivalent to: you go to your Kleiderschrank, open the cupboard, then the drawer inside, then the box, and get your socks out)
+
+2. using **accessor functions** (Equivalent to: "Alexa! get my socks!"). Check out [this page](https://satijalab.org/seurat/articles/essential_commands.html) to have an overview of the different accessor functions for Seurat objects!
+
+
+
+We can start exploring the seurat object using the `$` to explore its *metadata* in combination with the tab 
 key. For example, during the creation of the seurat object the number of counts quality metric
 is calculated and added to the metadata. We can explore this metric by accessing the metadata
 as follows.
@@ -96,6 +104,8 @@ pbmc.seurat@assays$RNA@counts[1:5, 1:5]
 ## NOC2L                     .
 ## PLEKHN1                   .
 ```
+
+
 
 
 ## Extracting expression values 
