--- a/day2/02.md
+++ b/day2/02.md
@@ -110,7 +110,7 @@ features recorded.
 <blockquote>
 Performing your own QC
 
-Perform a QC using the downsampled 10 PBMC 250 cells data
+Perform a QC using the downsampled 10x PBMC 250 cells data
 
 * Calculate and visualize QC metrics
 * Filter out cells based on the calculated values
